Colaboratory를 통해 생성됨

--- a/머신러닝team_project4.ipynb
+++ b/머신러닝team_project4.ipynb
@@ -34,7 +34,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b337b6ec-8085-4d6e-cd51-c61f949737d3"
+        "outputId": "3dbb4093-76a5-4218-ad9c-d550898aa0d5"
       },
       "outputs": [
         {
@@ -86,7 +86,7 @@
       },
       "outputs": [],
       "source": [
-        "train = pd.read_csv(\"/content/fashion-mnist_train.csv\")\n",
+        "train = pd.read_csv(\"/content/drive/MyDrive/Colab Notebooks/fashion-mnist_train.csv\")\n",
         "test = pd.read_csv(\"/content/fashion-mnist_test.csv\")\n",
         "\n",
         "\n",
@@ -160,7 +160,7 @@
       "source": [
         "\n",
         "# PCA 모델 생성\n",
-        "pca = PCA(n_components=2)\n",
+        "pca = PCA(n_components=50)\n",
         "X_train_reduced = pca.fit_transform(X_train_std)\n",
         "X_test_reduced = pca.transform(X_test_std)\n",
         "#print(X_train_reduced)"
@@ -198,7 +198,11 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#xgb:accuracy : 87.39 %\n",
+        "#표준편차:  0.25 %\n",
+        "\n"
+      ],
       "metadata": {
         "id": "Oj74A0UADlIz"
       },
@@ -217,10 +221,25 @@
     {
       "cell_type": "code",
       "source": [
+        "svm_model = SVC(kernel = 'rbf', probability = True, random_state = 42)\n",
+        "classifier_xgb = XGBClassifier( random_state = 42)\n",
+        "lgb_model = lgb.LGBMClassifier( random_state = 42)\n",
+        "hist_gb_model = HistGradientBoostingClassifier(max_iter=100, random_state=42)\n",
+        "rf_model = RandomForestClassifier( random_state=42)"
+      ],
+      "metadata": {
+        "id": "czVYEW_lcQDp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from sklearn.model_selection import cross_val_score\n",
-        "accuracies = cross_val_score(estimator = classifier_svr, X = X_train_reduced, y = y_train, cv = 10)\n",
-        "printf(\"accuracy : {:.2f} %\".format(accuracies.mean()*100))\n",
-        "printf(\"표준편차: {: .2f} %\".format(accuracies.std()*100))"
+        "accuracies = cross_val_score(estimator = svm_model, X = X_train_reduced, y = y_train, cv = 10)\n",
+        "print(\"accuracy : {:.2f} %\".format(accuracies.mean()*100))\n",
+        "print(\"표준편차: {: .2f} %\".format(accuracies.std()*100))"
       ],
       "metadata": {
         "id": "VjScNfoFYM2R"
@@ -544,7 +563,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZx5mxe+hhe4OdSsRLc2Fw",
+      "mount_file_id": "1KqB3PU6W-fXLJzRh9QgNHBTFqs4tPsMJ",
+      "authorship_tag": "ABX9TyNGhehNKDKSdwwu53JiU9r5",
       "include_colab_link": true
     },
     "kernelspec": {
